tests/parse_print/issues/133/4/stderr.expected
Error:
    tests/parse_print/issues/133/4/133_4.essence:3:16:
unexpected [
expecting indexed
    find m : matrix[int(1..3)] of int(1..9) 
                   ^